# alist-encrypt-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: build-binaries.yml  build-docker.yml
config/: app.env.example
docs/: migration_checklist.md  openapi.yaml
migrations/: 001_init.sql
scripts/: cutover_check.sh  init_mysql.sh  rollback_hint.sh  run_tests.sh
src/: admin_ui.rs  config.rs  context.rs  control.rs  crypto_core.rs  db.rs  filename_codec.rs  lib.rs  logging.rs  main.rs  meta_prefetch.rs  metrics.rs  migrate.rs  proxy.rs  routes.rs  state.rs  timeouts.rs  upstream.rs  webdav.rs
web/: admin.html  login.html
