[package]
name = "alist-encrypt-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
thiserror = "2"
percent-encoding = "2"
unicode-normalization = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "http2"] }
futures-util = "0.3"
sqlx = { version = "0.8", default-features = false, features = ["mysql", "runtime-tokio-rustls"] }
dotenvy = "0.15"
quick-xml = "0.37"
aes = "0.8"
ctr = "0.9"
rc4 = "0.1"
pbkdf2 = "0.12"
sha2 = "0.10"
md-5 = "0.10"
hex = "0.4"
bytes = "1"
rand = "0.8"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
